syntax = "proto3";

option csharp_namespace = "KwikNestaIdentity.Svc.Contract.Protos";

service AppUserService {
	// Get loggedin user details
	rpc GetLoggedInUser (Empty) returns (GetLoggedInUserResponse);
	// Update user basic details
	rpc UpdateBasicUserDetails (UpdateBasicUserDetailsRequest) returns (UpdateBasicUserDetailsResponse);
	// Get user by id
	rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
	// Get users by their ids
	rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
	//Get paged list of users
	rpc GetPagedUsers (GetPagedUsersRequest) returns (GetPagedUsersResponse);
}

//--------------------Message-----------------------
message Empty {}

message GetPagedUsersRequest {
  string search = 1;
  int32 page = 2;
  int32 size = 3;
  optional GrpcUserGender gender = 4;
  optional GrpcUserStatus status = 5;
}

message GetUserByIdRequest {
	string user_id = 1;
}

message GetUsersByIdsRequest {
	repeated string user_ids = 1;
}

message UpdateBasicUserDetailsRequest {
	string first_name = 1;
	string last_name = 2;
	string other_name = 3;
	GrpcUserGender gender = 4;
}


//--------------------Response Models---------------
message UserPageMetaData {
  int32 total_count = 1;
  int32 page = 2;
  int32 size = 3;
  bool has_previous = 4;
  bool has_next = 5;
}

message GetLoggedInUserResponse {
	User user = 1;
}

message GetUserByIdResponse {
	User user = 1;
}

message GetUsersByIdsResponse {
	repeated User users = 1;
}

message UpdateBasicUserDetailsResponse {
	UserStringResponse response = 1;
}

message UserStringResponse {
	string message = 1;
	int32 status = 2;
}

message GetPagedUsersResponse {
  repeated User users = 1;
  UserPageMetaData meta_data = 2; 
}

message User {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	string middle_name = 4;
	string email = 5;
	string gender = 6;
	GrpcUserStatus status = 7;
	string status_description = 8;
	string phone_number = 9;
}

//--------------------Enums-------------------------
enum GrpcUserStatus {
    PENDING_VERIFICATION = 0;
    ACTIVE = 1;
    DEACTIVATED = 2;
    SUSPENDED = 3;
}

enum GrpcUserGender {
	OTHERS = 0;
	MALE = 1;
	FEMALE = 2;
}